--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bienvenue sur mon site 🚀 🚀 Déploiement automatique via GitHub Actions</h1>
+        <h1>Bienvenue sur mon site 🚀 🚀 Déploiement automatique via GitHub Actions !!</h1>
         <p>Ce site a été déployé automatiquement avec <strong>Docker</strong> et <strong>Ansible</strong>.</p>
         <p>Powered by <span class="tech">Nginx</span> dans un conteneur Docker 🐳</p>
     </div>
